# eilish-bass

./: .gitignore  package-lock.json  pyproject.toml  ruff.toml  serverless.yml
app/: handler.py
app/clients/: bedrock_chat.py
app/functions/core/: handler.py
app/models/: bedrock_chat.py  exceptions.py  intent_classifier.py
app/services/: logger.py  prompt_manager.py
app/services/intent_classification/: error_handler.py  intent_classifier.py  utils.py
app/services/intent_classification/intent_configs/: csr_intents.json  intents.json
app/services/intent_classification/prompt_templates/: intent_classification.j2  slot_extraction.j2
