[project]
name = "eilish-bass"
version = "0.1.0"
description = ""
authors = [
    {name = "Dinal Jayathilake",email = "dinalj54@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3 (>=1.38.32,<2.0.0)",
    "msgspec (>=0.19.0,<0.20.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "structlog (>=25.4.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

